samples/_failures_safe/1761370722_a311fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4202cde1.c: In function ‘main’:
./samples/SAFE/__tmp_4202cde1.c:162:5: error: expected expression at end of input
  162 |     if (len > 0 && input[len -
      |     ^~
./samples/SAFE/__tmp_4202cde1.c:162:5: error: expected declaration or statement at end of input
